spring boot update 3.5.0 add lombok change table prefix add swagger add integration tests add spring session with database update dependencies update security config usersecurity

--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -7,7 +7,11 @@
     <body>
         <div layout:fragment="content">
             <h1 class="grow text-3xl md:text-4xl font-medium mb-8">[[#{home.index.headline}]]</h1>
-            <p class="mb-12">[(#{home.index.text})]</p>
+            <p class="mb-4">[(#{home.index.text})]</p>
+            <p class="mb-12">
+                <span>[[#{home.index.swagger.text}]]</span>
+                <a th:href="@{/swagger-ui.html}" target="_blank" class="underline">[[#{home.index.swagger.link}]]</a>.
+            </p>
             <div class="md:w-2/5 mb-12">
                 <h4 class="text-2xl font-medium mb-4">[[#{home.index.exploreEntities}]]</h4>
                 <div class="flex flex-col border border-gray-300 rounded">
