--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+            xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
     <head>
         <title layout:title-pattern="$CONTENT_TITLE | $LAYOUT_TITLE">[[#{app.title}]]</title>
         <meta charset="utf-8" />
@@ -38,6 +39,12 @@
                                 <ul class="hidden block absolute right-0 bg-white border border-gray-300 rounded min-w-[10rem] py-2" aria-labelledby="navbarEntitiesLink">
                                     <li><a th:href="@{/garminRuns}" class="inline-block w-full hover:bg-gray-200 px-4 py-1">[[#{garminRun.list.headline}]]</a></li>
                                 </ul>
+                            </li>
+                            <li>
+                                <a sec:authorize="!isAuthenticated()" th:href="@{/login}" class="block text-gray-500 p-2">[[#{navigation.login}]]</a>
+                                <form sec:authorize="isAuthenticated()" th:action="@{/logout}" method="post" class="block text-gray-500 p-2">
+                                    <input th:value="#{navigation.logout}" type="submit" class="cursor-pointer" />
+                                </form>
                             </li>
                         </ul>
                     </div>
