add entity run-event

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -38,6 +38,7 @@
                                 </button>
                                 <ul class="hidden block absolute right-0 bg-white border border-gray-300 rounded min-w-[10rem] py-2" aria-labelledby="navbarEntitiesLink">
                                     <li><a th:href="@{/garminRuns}" class="inline-block w-full hover:bg-gray-200 px-4 py-1">[[#{garminRun.list.headline}]]</a></li>
+                                    <li><a th:href="@{/runEvents}" class="inline-block w-full hover:bg-gray-200 px-4 py-1">[[#{runEvent.list.headline}]]</a></li>
                                 </ul>
                             </li>
                             <li>
