--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -15,7 +15,8 @@
             <div class="md:w-2/5 mb-12">
                 <h4 class="text-2xl font-medium mb-4">[[#{home.index.exploreEntities}]]</h4>
                 <div class="flex flex-col border border-gray-300 rounded">
-                    <a th:href="@{/garminRuns}" class="w-full border-gray-300 hover:bg-gray-100 rounded-t rounded-b px-4 py-2">[[#{garminRun.list.headline}]]</a>
+                    <a th:href="@{/garminRuns}" class="w-full border-gray-300 hover:bg-gray-100 border-b rounded-t px-4 py-2">[[#{garminRun.list.headline}]]</a>
+                    <a th:href="@{/runEvents}" class="w-full border-gray-300 hover:bg-gray-100 rounded-b px-4 py-2">[[#{runEvent.list.headline}]]</a>
                 </div>
             </div>
         </div>
